# kcf-cuda

./: .gitignore  README.md
kcf/: CMakeLists.txt  fhog.cpp  fhog.hpp  kcftracker.cpp  recttools.hpp  runkcftracker.cpp
kcf-cv-reproduce/: CMakeLists.txt  cv_kcf.cpp  cv_kcf.h  main.cpp
